Fix bug on close fullscreen button overlapping other btns

--- a/src/styles/_video-wrapper.scss
+++ b/src/styles/_video-wrapper.scss
@@ -13,6 +13,8 @@
 }
 .videoWrapper__close {
 	position: fixed;
+	width: 100px;
+	margin: auto;
 	top: 7px;
 	left: 0;
 	right: 0;
